--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,18 @@ h3{
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.305);
 }
 
+.article-container article img{
+    width: 50%;
+    height: 100%;
+}
+
+.project-description-wrapper{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: centre;
+}
+
 article h3{
     font-size: 1.5rem;
 }
