--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,8 @@ h3{
 }
 
 .article-container article{
+    display: flex;
+    align-items: center;
     width: 90%;
     padding: 20px;
     border: 1px solid rgba(155, 155, 155, 0.27);
