--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,7 @@ h3{
 .article-container article{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 90%;
     padding: 20px;
     border: 1px solid rgba(155, 155, 155, 0.27);
