--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,7 @@ h3{
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    border: 1px solid black;
 }
 
 .project-description-wrapper h3{
