--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,7 @@ h3{
 }
 
 .article-container{
+    width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -323,29 +324,28 @@ h3{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 30%;
+    width: 330px;
     height: auto;
     padding: 20px;
+    text-align: center;
     border-radius: 10px;
     transition: transform 0.5s ease;
-    border: 1px solid black;
 }
 
 .article-container article:hover{
     transform: scale(1.02);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.142);
 }
 
 .article-container article img{
-    width: 100%;
+    width: 330px;
 }
 
 .project-description-wrapper{
-    width: 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
-    border: 1px solid black;
 }
 
 .project-description-wrapper h3{
@@ -354,14 +354,13 @@ h3{
 }
 
 .project-description-wrapper p{
-    margin-top: 10px;
     width: 100%;
     text-align: left;
+    margin-top: 10px;
 }
 
-
 .project-description-wrapper a{
-    width: 100px;
+    width: 120px;
     padding: 8px;
     color: white;
     font-weight: bold;
