--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ nav ul li a{
     cursor: pointer;
     color: rgb(87, 91, 94);
     border-radius: 5px;
+    transition: all 0.3s ease;
 }
 
 nav ul li a:hover{
