--- a/styles.css
+++ b/styles.css
@@ -468,6 +468,30 @@ form h3{
     border-radius: 5px;
 }
 
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    background-color: white;
+    color: #333;
+    border-radius: 10px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    opacity: 0;
+    transition: all 0.4s ease;
+    z-index: 9999;
+    display: none;
+    width: auto;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.modal.active {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
 form button{
     width: 100%;
     padding: 15px;
