--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,7 @@ h3{
     height: auto;
     padding: 20px;
     text-align: center;
+    border: 1px solid rgba(128, 127, 130, 0.414);
     border-radius: 10px;
     transition: transform 0.5s ease;
 }
